# rusbulgparcor

./: README.md  authors_formatted.txt  authors_formatted_corrected.txt  corpus_bilingual_ru_bg.py  pyproject.toml
