[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rusbulgparcor"
version = "1.0.0"
description = "Bilingual parallel corpus builder for Russian-Bulgarian sentence alignment"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU"}
authors = [
    {name = "Aleksandra Baiuk", email = "alexandra.m.baiuk@gmail.com"}
]
keywords = ["nlp", "parallel-corpus", "sentence-alignment", "multilingual", "russian", "bulgarian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "razdel>=0.5.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "openpyxl>=3.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/fortvivlan"
Repository = "https://github.com/fortvivlan/rusbulgparcor"
Documentation = "https://github.com/fortvivlan/rusbulgparcor#readme"

[tool.setuptools]
py-modules = ["rusbulgparcor"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120
